--- a/tosochu-test/style.css
+++ b/tosochu-test/style.css
@@ -81,8 +81,34 @@ body {
     border: 1px solid rgb(180, 15, 15);
     border-top: none;
     margin: 5px 5px;
+    padding: 5px;
+}
+
+.control-chooser{
+    display: inline-block;
+    flex: 1;
+    padding: 0 5px;
+    margin: 5px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(180, 15, 15);
+    border-radius: 2px;
 }
 
 .display-main {
     color: rgb(255, 255, 255);
+}
+
+.display-showing {
+    border-radius: 100px;
+    border: 1px solid rgb(255, 255, 255);
+    padding: 0 10px;
+    margin: 0 3px;
+}
+
+.display-option {
+    background-color: rgb(40, 44, 44);
+}
+
+.display-major {
+    font-weight: bold;
 }
